--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
 title: Emberlight Interactive
 author: Tristan Mastrodicasa
 description: Toronto based game studio
