--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-theme: jekyll-theme-minimal
-logo: "/da-flame.png"
+theme: jekyll-theme-slate
 title: Emberlight Interactive
 author: Tristan Mastrodicasa
 description: Toronto based game studio
